chore(outlook-plugin): tweak to error logic

--- a/apps/outlook-rooms-addin/src/assets/ms-auth-login.html
+++ b/apps/outlook-rooms-addin/src/assets/ms-auth-login.html
@@ -64,9 +64,9 @@
                 } catch (e) {
                     element.innerHTML =
                         element.innerHTML + '<code>Error:' + e + '</code>[' +
-                    Object.keys(Office).join(', ') +
+                    Object.keys(Office || {}).join(', ') +
                     ']' +
-                    +Object.keys((Office || {}).context).join(', ');
+                    +Object.keys((Office || {}).context || {}).join(', ');
                 }
             }
 
@@ -77,9 +77,9 @@
                     '<code>Error:' +
                     msg +
                     '</code>[' +
-                    Object.keys(Office).join(', ') +
+                    Object.keys(Office || {}).join(', ') +
                     ']' +
-                    +Object.keys((Office || {}).context).join(', ');
+                    +Object.keys((Office || {}).context || {}).join(', ');
             };
 
             if (window.addEventListener) {
