chore(outlook-plugin): add more details to error info

--- a/apps/outlook-rooms-addin/src/assets/ms-auth-login.html
+++ b/apps/outlook-rooms-addin/src/assets/ms-auth-login.html
@@ -67,6 +67,7 @@
                             'Unable to complete login. <pre>' +
                             JSON.stringify(query, undefined, 4) +
                             '</pre>' +
+                            window.location.search + ' | '
                             location.href;
                     }
                 } catch (e) {
