--- a/apps/outlook-rooms-addin/src/assets/ms-auth-login.html
+++ b/apps/outlook-rooms-addin/src/assets/ms-auth-login.html
@@ -39,7 +39,7 @@
                 for (let i = 0; i < str_pairs.length; i++) {
                     var split_pair = str_pairs[i].split('=');
                     if (split_pair[1]) {
-                        map[decodeURIComponent(split_pair[0])] =
+                        map[decodeURIComponent(split_pair[0].replace('?', ''))] =
                             decodeURIComponent(split_pair[1]);
                     }
                 }
