refactor(outlook-addin): add dark mode styles

--- a/apps/outlook-rooms-addin/src/index.html
+++ b/apps/outlook-rooms-addin/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" id="placeos">
     <head>
         <meta charset="utf-8" />
         <title>Outlook Rooms Addin | PlaceOS</title>
@@ -29,7 +29,7 @@
         />
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     </head>
-    <body id="placeos">
+    <body>
         <app-root></app-root>
 
         <noscript> Please enable JavaScript to continue using this application. </noscript>
