--- a/apps/booking-panel/src/index.html
+++ b/apps/booking-panel/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" id="placeos">
     <head>
         <meta charset="utf-8" />
         <title>Bookings | PlaceOS</title>
@@ -21,7 +21,7 @@
         <link rel="manifest" href="manifest.webmanifest" />
         <meta name="theme-color" content="#1976d2" />
     </head>
-    <body id="placeos">
+    <body>
         <app-root></app-root>
         <noscript
             >Please enable JavaScript to continue using this
