--- a/en/index.html
+++ b/en/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en" id="placeos" dir="ltr"><head>
         <meta charset="utf-8">
         <title>Workplace | PlaceOS</title>
-        <base href="./en/">
+        <base href=".">
         <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
         <link rel="icon" type="image/x-icon" href="favicon.ico">
         <link rel="preconnect" href="https://fonts.gstatic.com">
