--- a/apps/concierge/src/index.html
+++ b/apps/concierge/src/index.html
@@ -14,18 +14,13 @@
             href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&amp;display=swap"
             rel="stylesheet"
         />
-        <link
-            href="https://fonts.googleapis.com/icon?family=Material+Icons"
-            rel="stylesheet"
-        />
         <link rel="manifest" href="manifest.webmanifest" />
         <meta name="theme-color" content="#1976d2" />
     </head>
     <body>
         <app-root></app-root>
-        <noscript
-            >Please enable JavaScript to continue using this
-            application.</noscript
-        >
+        <noscript>
+            Please enable JavaScript to continue using this application.
+        </noscript>
     </body>
 </html>
